(library
    (name lex)
    (libraries core stdio str)
    (modules Lex)
    (preprocess (pps ppx_deriving.std))
 )

(library
    (name parse)
    (libraries core lex)
    (modules Parse)
    (preprocess (pps ppx_deriving.std))
)

(library
    (name eval)
    (libraries lex parse)
    (modules Eval)
    (preprocess (pps ppx_deriving.std))
)

(library
    (name typecheck)
    (libraries parse)
    (modules Typecheck)
    (preprocess (pps ppx_deriving.std))
)

(library
    (name compile_to_js)
    (libraries parse)
    (modules Compile_to_js)
    (preprocess (pps ppx_deriving.std))
)